--- a/README
+++ b/README
@@ -1,16 +1,13 @@
-Text-Balanced-Simple
+Text::Balanced::Simple
 
-The README is used to introduce the module and provide instructions on
-how to install the module, any machine dependencies it may have (for
-example C compilers and installed libraries) and any other information
-that should be provided before the module is installed.
+Text::Balanced::Simple is a Perl module to rival Text::Balanced in order to
+provide a slightly more ... modern interface to what is a common task.
 
-A README file is required for CPAN modules since CPAN extracts the README
-file from a module distribution so that people browsing the archive
-can use it to get an idea of the module's uses. It is usually a good idea
-to provide version information here so that people can decide whether
-fixes for the module are worth downloading.
+It was written to solve the problem of trying to return text in balanced
+delimiters regardless of whether it is bracketed or not; which, believe it or
+not, is something I wanted to do.
 
+Check out its perldoc for usage information.
 
 INSTALLATION
 
@@ -18,38 +15,39 @@ To install this module, run the following commands:
 
 	perl Makefile.PL
 	make
-	make test
-	make install
+	make test && make install
 
 SUPPORT AND DOCUMENTATION
 
-After installing, you can find documentation for this module with the
-perldoc command.
+Documentation is in the usual place:
 
     perldoc Text::Balanced::Simple
 
-You can also look for information at:
+Support is in the usual place. IRC.
 
-    RT, CPAN's request tracker
-        http://rt.cpan.org/NoAuth/Bugs.html?Dist=Text-Balanced-Simple
-
-    AnnoCPAN, Annotated CPAN documentation
-        http://annocpan.org/dist/Text-Balanced-Simple
-
-    CPAN Ratings
-        http://cpanratings.perl.org/d/Text-Balanced-Simple
-
-    Search CPAN
-        http://search.cpan.org/dist/Text-Balanced-Simple/
-
+Bugs go to http://github.com/Altreus/Text-Balanced-Simple/issues
 
 LICENSE AND COPYRIGHT
 
-Copyright (C) 2010 Alastair McGowan-Douglas
+Copyright (c) 2010 Alastair McGowan-Douglas ("Altreus")
 
-This program is free software; you can redistribute it and/or modify it
-under the terms of either: the GNU General Public License as published
-by the Free Software Foundation; or the Artistic License.
+Permission is hereby granted, free of charge, to any person obtaining a copy
+of this software and associated documentation files (the "Software"), to deal
+in the Software without restriction, including without limitation the rights
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is
+furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in
+all copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
+THE SOFTWARE.
 
 See http://dev.perl.org/licenses/ for more information.
 
